--- a/_modules/commands/longform_commands.html
+++ b/_modules/commands/longform_commands.html
@@ -309,7 +309,7 @@
         <span class="n">old_meta</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">],</span>
         <span class="n">new_meta</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">],</span>
         <span class="n">doc_id</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="n">longform_builder</span><span class="o">.</span><span class="n">DOC_ID_DEFAULT</span><span class="p">,</span>
-    <span class="p">):</span>
+    <span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Initialize the MoveLongformEntryCommand.</span>
 
@@ -420,7 +420,7 @@
         <span class="n">row_id</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span>
         <span class="n">old_meta</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">],</span>
         <span class="n">doc_id</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="n">longform_builder</span><span class="o">.</span><span class="n">DOC_ID_DEFAULT</span><span class="p">,</span>
-    <span class="p">):</span>
+    <span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Initialize the PromoteLongformEntryCommand.</span>
 
@@ -525,7 +525,7 @@
         <span class="n">row_id</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span>
         <span class="n">old_meta</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">],</span>
         <span class="n">doc_id</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="n">longform_builder</span><span class="o">.</span><span class="n">DOC_ID_DEFAULT</span><span class="p">,</span>
-    <span class="p">):</span>
+    <span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Initialize the DemoteLongformEntryCommand.</span>
 
@@ -630,7 +630,7 @@
         <span class="n">row_id</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span>
         <span class="n">old_meta</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">],</span>
         <span class="n">doc_id</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="n">longform_builder</span><span class="o">.</span><span class="n">DOC_ID_DEFAULT</span><span class="p">,</span>
-    <span class="p">):</span>
+    <span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Initialize the RemoveLongformEntryCommand.</span>
 
