--- a/_modules/commands/base_command.html
+++ b/_modules/commands/base_command.html
@@ -321,7 +321,7 @@
 
 <div class="viewcode-block" id="BaseCommand.__init__">
 <a class="viewcode-back" href="../../commands.html#commands.base_command.BaseCommand.__init__">[docs]</a>
-    <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+    <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Initializes the command.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
